Minor change to .gitignore file, removed needlessly tracked file.

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ fastlane/test_output
 Build/Intermediates/Aim!.build/Debug-iphonesimulator
 Aim!.xcodeproj/xcuserdata
 Build/Intermediates/Aim!.build/Debug-watchsimulator
+Aim!.xcodeproj/project.xcworkspace/xcuserdata/martinzhang.xcuserdatad/UserInterfaceState.xcuserstate
