Testing branch, deleted commented lines.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Build/Intermediates/Aim!.build/Debug-iphonesimulator
 Aim!.xcodeproj/xcuserdata
 Build/Intermediates/Aim!.build/Debug-watchsimulator
 Aim!.xcodeproj/project.xcworkspace/xcuserdata/martinzhang.xcuserdatad/UserInterfaceState.xcuserstate
+Build/Products/Debug-iphonesimulator
+Build/Products/Debug-watchsimulator
