--- a/Aim!/Info.plist
+++ b/Aim!/Info.plist
@@ -31,6 +31,10 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PhosphateProInline.otf</string>
+	</array>
 	<key>FacebookAppID</key>
 	<string>250018238744690</string>
 	<key>FacebookDisplayName</key>
