Set device orientation to portrait, made collection view always scrollable, and also worked on Settings/Award screen nav bar attributes.

--- a/Aim!/Info.plist
+++ b/Aim!/Info.plist
@@ -38,7 +38,7 @@
 	<key>FacebookAppID</key>
 	<string>250018238744690</string>
 	<key>FacebookDisplayName</key>
-	<string>Aim! For iOS and watchOS</string>
+	<string>Aim!</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
@@ -61,8 +61,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) photo use</string>
