--- a/Aim!/Info.plist
+++ b/Aim!/Info.plist
@@ -80,6 +80,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
+		<string>external-accessory</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
