--- a/Aim!/Info.plist
+++ b/Aim!/Info.plist
@@ -35,6 +35,8 @@
 	<string>250018238744690</string>
 	<key>FacebookDisplayName</key>
 	<string>Aim!</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
@@ -49,8 +51,6 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>$(PRODUCT_NAME) media library use</string>
 	<key>NSCalendarsUsageDescription</key>
@@ -79,8 +79,9 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>location</string>
+		<string>audio</string>
 		<string>external-accessory</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
