Good work on hiding API key(not proud of having to deal with it, should've known this.). Bug on watch app after logged out from iphone, need to kill token label contents.

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Build/Intermediates/Aim!.build/Debug-watchsimulator
 Aim!.xcodeproj/project.xcworkspace/xcuserdata/martinzhang.xcuserdatad/UserInterfaceState.xcuserstate
 Build/Products/Debug-iphonesimulator
 Build/Products/Debug-watchsimulator
+Aim!/AimKeys.plist
